--- a/client/src/reusable-styling/mixins/_mixins.scss
+++ b/client/src/reusable-styling/mixins/_mixins.scss
@@ -13,10 +13,38 @@
 }
 
 @mixin button {
-    width: 10rem;
+        width: 10rem;
         height: 2rem;
         border-radius: 10px;
         border: 4px solid $melon;
         background-color: $apricot;
-        font-size: 16px;
+        font-size: 18px;
+        color: $liver;
+
+        transition: all 0.5s;
+        cursor: pointer;
+        & span {
+            cursor: pointer;
+            display: inline-block;
+            position: relative;
+            transition: 0.5s;
+
+            &:after{
+                content: '\00bb';
+                position: absolute;
+                opacity: 0;
+                top: 0;
+                right: -20px;
+                transition: 0.5s;
+            }
+        }
+
+        &:hover span{
+            padding-right: 25px;
+            &:after{
+                opacity: 1;
+                right: 0;
+            }
+        }
+
 }
