--- a/client/src/pages/entries/entries.css
+++ b/client/src/pages/entries/entries.css
@@ -1,1 +1,103 @@
-/* No CSS *//*# sourceMappingURL=entries.css.map */
+@font-face {
+  font-family: 'Raleway';
+  src: url("../assets/fonts/Raleway/static/Raleway-Regular.ttf");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Raleway';
+  src: url("../assets/fonts/Raleway/static/Raleway-Bold.ttf");
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Raleway';
+  src: url("../assets/fonts/Raleway/static/Raleway-Light.ttf");
+  font-weight: lighter;
+}
+
+body {
+  background-color: #504D56;
+  font-family: "Raleway";
+}
+
+.entries__button {
+  width: 10rem;
+  height: 2rem;
+  border-radius: 10px;
+  border: 4px solid #FFB4A2;
+  background-color: #FFCDB2;
+  font-size: 18px;
+  color: #504D56;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  cursor: pointer;
+  position: fixed;
+  top: 400px;
+  right: 16px;
+}
+
+.entries__button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.entries__button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.entries__button:hover span {
+  padding-right: 25px;
+}
+
+.entries__button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.entries--container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.entry__container {
+  margin-top: 50px;
+  font-size: 20px;
+  height: 80%;
+  width: 12rem;
+  background-color: #FFCDB2;
+  border-radius: 10px;
+  padding: 24px;
+  color: #504D56;
+  text-decoration: none;
+  font-size: 18px;
+  border: 2px solid #FFB4A2;
+}
+
+.entry__mood {
+  font-weight: bold;
+  background-color: #FFB4A2;
+  border-radius: 10px;
+}
+/*# sourceMappingURL=entries.css.map */
