--- a/client/src/reusable-styling/_fonts.scss
+++ b/client/src/reusable-styling/_fonts.scss
@@ -15,3 +15,9 @@
     src: url("../assets/fonts/Raleway/static/Raleway-Light.ttf");
     font-weight: lighter;
 }
+
+@font-face{
+    font-family: "Pacifico";
+    src: url("../assets/fonts/Pacifico-Regular.ttf");
+    font-weight: normal;
+}
