completion of footer

--- a/client/src/reusable-styling/variables/_variables.scss
+++ b/client/src/reusable-styling/variables/_variables.scss
@@ -6,3 +6,7 @@ $apricot: #FFCDB2;
 $melon: #FFB4A2;
 $blue: #B2CEDE;
 $liver: #504D56;
+
+$bg: #0BAAD4;
+$hover: darken($bg, 10%);
+$text: rgba(255,255,255,.7);
