--- a/client/src/pages/footer/footer.scss
+++ b/client/src/pages/footer/footer.scss
@@ -4,24 +4,31 @@
 .footer{
     display: flex;
     flex-direction: column;
-    flex: 1;
     justify-content: flex-end;
-    background-color: $melon;
-    border-radius: 10px;
-    margin-top: 200px;
-    font-family: "Raleway";
-    
-    &__container--1{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+    height: 100%;
+    &__container{
+        
+        background-color: $melon;
+        border-radius: 10px;
+        margin-top: 200px;
+        font-family: "Raleway";
+        position:absolute;
+        left:0;
+        bottom:0;
+        right:0;
+        &--1{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+        }
+
+        &--2{
+            border-top: 4px solid $apricot;
+            margin: auto 16px;
+            border-radius: 3px;
+        }
     }
     
-    &__container--2{
-        border-top: 4px solid $apricot;
-        margin: auto 16px;
-        border-radius: 3px;
-    }
     &__direct{
     font-size: 24px;
     color: $liver;
