--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -58,46 +58,39 @@ body {
 }
 
 .home__button {
-  width: 10rem;
-  height: 2rem;
-  border-radius: 10px;
-  border: 4px solid #FFB4A2;
-  background-color: #FFCDB2;
-  font-size: 18px;
+  position: relative;
+  display: block;
   color: #504D56;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-  cursor: pointer;
+  text-decoration: none;
+  margin: 30px 0;
+  border: 2px solid #FFB4A2;
+  padding: 14px 60px;
+  text-transform: uppercase;
+  overflow: hidden;
+  -webkit-transition: 1s all ease;
+  transition: 1s all ease;
   margin: auto 16px;
   margin-top: 25px;
   -ms-flex-item-align: end;
       align-self: flex-end;
 }
 
-.home__button span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.home__button span:after {
-  content: '\00bb';
+.home__button::before {
+  background: #FFB4A2;
+  content: "";
   position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: -1;
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+  width: 0%;
+  height: 100%;
 }
 
-.home__button:hover span {
-  padding-right: 25px;
-}
-
-.home__button:hover span:after {
-  opacity: 1;
-  right: 0;
+.home__button:hover::before {
+  width: 100%;
 }
 /*# sourceMappingURL=home.css.map */
