--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -25,6 +25,11 @@ body{
         padding: 16px;
         color: $liver;
     }
+    &__image{
+        width: 40%;
+        height: 40%;
+        border-radius: 50%;
+    }
 
     &__button{
         @include button;
