--- a/client/src/pages/about/about.scss
+++ b/client/src/pages/about/about.scss
@@ -22,6 +22,13 @@ body{
         padding: 24px;
         color: $liver;
         border: 2px solid $melon;
+        &--bio{
+            display: flex;
+        }
+
+        @include tabletSize{
+            font-size: 24px;
+        }
     }
     &__sub{
         text-align: start;
@@ -55,5 +62,11 @@ body{
         &--number{
 
         }
+    }
+    &__profilePic{
+        height: 200px;
+        width: 200px;
+        border-radius: 50%;
+        margin-right: 24px;
     }
 }
