--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -24,6 +24,9 @@ body{
         border-radius: 10px;
         padding: 16px;
         color: $liver;
+        @include tabletSize{
+            font-size: 24px;
+        }
     }
     &__image{
         width: 40%;
