--- a/client/src/pages/entries/entries.scss
+++ b/client/src/pages/entries/entries.scss
@@ -1,45 +1,52 @@
-@import '../../reusable-styling/mixins/mixins';
-@import '../../reusable-styling/fonts';
+@import "../../reusable-styling/mixins/mixins";
+@import "../../reusable-styling/fonts";
 
-body{
+body {
     background-color: $liver;
     font-family: "Raleway";
 }
-.entries{
-    &__button{
-    @include button;
-    position: fixed;
-    top: 400px;
-    right: 16px;
-    
+.entries {
+    &__button {
+        @include button;
+        position: fixed;
+        top: 400px;
+        right: 16px;
     }
-    &--container{
-        // display: flex;
-        // flex-direction: column;
-        // flex-wrap: wrap;
-        // align-items: center;
-        // justify-content: space-around;
-        // @include tabletSize{
-        // display: flex;
-        // flex-direction: row;
-        // justify-content: space-evenly;
-
+    &__filter {
+        background-color: $apricot;
+        padding: 10px;
+        margin: 36px;
+        color: $liver;
+        border-radius: 10px;
+        width: fit-content;
+        border: 4px solid $melon;
+        &--title {
+            font-size: 18px;
+            margin-right: 20px;
+        }
+        &--filter {
+            font-size: 16px;
+            font-weight: bold;
+        }
+        &--option{
+            border: 4px solid $melon;
+        }
     }
 }
 
-.entry{
+.entry {
     display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: space-around;
-        @include tabletSize{
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    @include tabletSize {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         margin: 40px 24px;
-        }
-    &__container{
+    }
+    &__container {
         margin-top: 50px;
         font-size: 20px;
         height: 80%;
@@ -51,23 +58,22 @@ body{
         text-decoration: none;
         font-size: 18px;
         border: 2px solid $melon;
-        @include tabletSize{
+        @include tabletSize {
             margin: 10px 24px;
             width: 50%;
             flex: 0 50%;
         }
     }
-    &__mood{
+    &__mood {
         font-weight: bold;
         background-color: $melon;
         border-radius: 10px;
-        @include tabletSize{
+        @include tabletSize {
             font-size: 32px;
         }
-
     }
-    &__entry{
-        @include tabletSize{
+    &__entry {
+        @include tabletSize {
             font-size: 24px;
         }
     }
