fix signout bug, routing back to home path

--- a/src/navbar/navbar.scss
+++ b/src/navbar/navbar.scss
@@ -46,6 +46,8 @@ body{
                             font-size: 20px;
                             margin: auto 130px;
                         }
-
+                        &:hover{
+                            @include buttonHover;
+                        }
     }
 }
