--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -44,3 +44,21 @@ body{
         }
     }
 }
+
+.pulsate {
+    animation: pulsate 3s ease-out;
+    animation-iteration-count: infinite; 
+    opacity: 0.5;
+}
+
+@keyframes pulsate {
+    0% { 
+        opacity: 0.5;
+    }
+    50% { 
+        opacity: 1.0;
+    }
+    100% { 
+        opacity: 0.5;
+    }
+}
