--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -47,8 +47,8 @@ body{
     &__button{
     @include button;
     position: fixed;
-    top: 400px;
-    right: 16px;
+    top: 140px;
+    left: 24px;
     &:hover{
         @include buttonHover;
     }
