--- a/src/App.scss
+++ b/src/App.scss
@@ -16,8 +16,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background: rgb(80,77,86);
+  background: linear-gradient(0deg, rgba(80,77,86,1) 0%, rgba(156,219,255,1) 100%);  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
