--- a/src/pages/journal/journal.scss
+++ b/src/pages/journal/journal.scss
@@ -2,7 +2,8 @@
 @import '../../reusable-styling/fonts';
 
 body{
-    background-color: $liver;
+    background: rgb(230,191,208);
+background: radial-gradient(circle, rgba(230,191,208,1) 69%, rgba(174,238,255,1) 100%);
     font-family: "Raleway";
 }
 
